# xDuinoRails-PAWN-scripting

./: .gitignore  CONCEPT.md  GEMINI.md  HOWTO_BUILD.md  HOWTO_USE.md  PLAN.md  README.md  RENODE_FAIL.md  RENODE_FAIL_FIX.md  blink.amx  blink.p  log.html  package-lock.json  package.json  playwright.config.ts  report.html  robot_output.xml  test_timer.repl
.github/workflows/: build.yml
pawn_build_final/: CMakeCache.txt  Makefile  cmake_install.cmake  pawncc
pawn_build_final/amx/: Makefile  cmake_install.cmake
pawn_build_final/compiler/: Makefile  cmake_install.cmake  pawnc.pc
scripts/: blink.amx  blink.p  compile_pawn.js
snapshots/: pawn_test.Should_Blink_LED_Via_Pawn_Script.fail0.save
src/: CMakeLists.txt  blink_amx.h  flash_storage.c  flash_storage.h  main.c  ymodem.c  ymodem.h
src/pawn/: amx.c
tests/: blockly.spec.ts  compiler.spec.ts  debug.gdb  debug.resc  pawn_test.resc  pawn_test.robot  requirements.txt  rp2040_pico.repl
web/: app.js  index.html
web/wasm/: pawncc.data  pawncc.js  pawncc.wasm
